--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -1,6 +1,6 @@
-%h1= @post.title
-%p= @post.content
+#post_content
+	%h1= @post.title
+	%p= @post.content
 
-= link_to "Düzenle", edit_post_path(@post)
-= link_to "Sil", post_path(@post), method: :delete, data: { confirm: "Emin misin?"}
-=link_to "Anasayfa", root_path
+	= link_to "Edit", edit_post_path(@post), class: "button"
+	= link_to "Delete", post_path(@post), method: :delete, data: { confirm: "Are you sure you want to do this?" }, class: "button"
